# QQbarAnalysis

./: .gitignore  CMakeLists.txt  README.md  build.sh  init_ilcsoft.sh
analysis/IDR_common_plots/: bbbar_bjet_info.root  bjet_info.C  bjet_v1.C  bjet_v1.eps  bjet_v2.C  bjet_v2.eps  ttbar_PrintData.root  ttbar_bjet_info.root
analysis/bbbar/: analysis.cc  observable.C  observable.cc  observable.h
analysis/bbbar/fit/: fit.C
analysis/bbbar_DBD/: AFBb.cc  analysis.cc  analysis.sh  analysis2.sh  analysis3.sh  analysis_rad.cc  analysis_rad.sh  final.sh  final2.sh  final3.sh  final4.sh  kstudy.cc  kstudy.sh  observable.cc  observable.h  test.h  test_angular.cc  test_angular.sh  test_id_RR.cc  test_id_RR_IDR.cc  test_selection.cc  test_selection.sh  test_selection_bkg.cc  test_selection_rad.cc  test_selection_rad.sh
analysis/bbbar_DBD/fit/: fit.C  fit.C~  fullfit.C
analysis/bbbar_DBD/macros/: draw_corrected.C  draw_corrected.C~  draw_sig_bkg.C  draw_sig_bkg.C~  purity.C  purity.C~  reco_corrected.C  reco_corrected.C~  resolution.C  selection_smallset.C
analysis/bbbar_DBD/macros_note/: AfbCalc.C  AfbCalc_fixedK.C  AfbCalc_fixedK_radret.C  ISRstudy.C  ISRstudy_plots.C  Kgamma.C  Kv_resolution.C  Rparam_comparison.C  Rq_kfixed.C  (+23 more)
analysis/bbbar_IDR/: README  analysis.cc  analysis.sh  observable.cc  observable.h  test_angular.cc  test_angular.sh  test_selection.cc  test_selection.sh
analysis/qqbar_tagging_efficiencies_DBD/: analysis_rho.cc  analysis_rho.sh  eff_tag.cc  eff_tag.sh  effstudies.cc  effstudies.h  test.cc  test.sh
analysis/style/: Labels.C  Labels.h  Style.C  Style.h  Utils.C  Utils.h
analysis/test_y23/: Correction.C  R3bl_plots.C  analysis.cc  analysis.sh  analysis.sh~  efficiencies_jettagging.ods  observable.cc  observable.h  output.root  output_y23_exclusive.root  output_y23_inclusive.root
include/: .QQbar.swp  BBbarAnalysis.hh  ClusteringOperator.hh  MathOperator.hh  QQBarMCOperator.hh  QQbarAnalysis.hh  QQbarMCOperator.hh  QQbarProcessor.hh  QQbarTools.hh  RecoJet.hh  TTbarAnalysis.hh  TopQuark.hh  TreeEntry.hh  TreeStructures.hh  TreeStructures.hh.BACKUP.50295.hh  TreeStructures.hh.BASE.50295.hh  TreeStructures.hh.REMOTE.50295.hh  TreeWriter.hh  VertexChargeOperator.hh
lib/: libQQbarProcessor.so.0.1.0
scripts/: test_bbbar.xml
scripts/2021_500GeV/: init_ilcsoft.sh  run_default.sh  test_default.xml
scripts/2021_LCFIandQQbar/: condor_exist.sh  run_default.sh  test_default.xml  test_default_newPID.xml
scripts/2021_LCFIandQQbar_dEdxCorrection/: Ranlux.coonf  condor_exist.sh  init_ilcsoft.sh  test_default.xml
scripts/2021_LCFIandQQbar_dEdx_TOF/: condor_exist.sh  run_default.sh  test_default.xml
scripts/2023_500GeV/: Ranlux.coonf  condor_exist.sh  run_default.sh  run_default.sub  test_default.xml
scripts/bbbar_DBD/: README
scripts/scripts_kekcc/: .gitignore  Ranlux.coonf  merge.sh  qqbar250_steer.xml  run.sh  runMarlin2  submit2
scripts/test_y23/: test.sh  test_7637_00001.xml
src/: BBbarAnalysis.cc  ClustringOperator.cc  MathOperator.cc  QQBarMCOperator.cc  QQbarAnalysis.cc  QQbarMCOperator.cc  QQbarProcessor.cc  QQbarTools.cc  RecoJet.cc  TTbarAnalysis.cc  TopQuark.cc  TreeWriter.cc  VertexChargeOperator.cc
(+611 files in other folders)
